--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@
     padding: 0px;
     font-family: 'Poppins', sans-serif;
 }
-section{
+
+section {
     padding: 50px 100px;
 }
+
 .primary-description {
     color: #3A3A3A;
     font-family: Poppins;
@@ -74,15 +76,76 @@ section{
 }
 
 /*  Brand Section */
-.brand-container{
+.brand-container {
     display: grid;
     grid-template-columns: repeat(6, 6fr);
     align-items: center;
     justify-content: center;
     gap: 20px;
 }
-.brand-container img{
+
+.brand-container img {
     box-shadow: 0px 4px 40px rgba(128, 128, 128, 0.205);
     padding: 10px 30px;
     border-radius: 5px;
+}
+
+/* Product Section */
+.produtc-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+}
+
+.product {
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    padding: 15px;
+    text-align: center;
+}
+
+.product img {
+    height: 300px;
+}
+
+.product-title {
+    color: var(--text-gray-900, #18191F);
+    font-family: Poppins;
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 40px;
+}
+
+.product-price {
+    color: rgba(0, 0, 0, 0.87);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 150%;
+
+}
+
+.checked {
+    color: orange;
+}
+
+.product-descriptin {
+    color: var(--gray-50, #787885);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+    margin: 10px 0;
+    padding: 5px 20px;
+}
+
+.see-more a{
+    text-align: right;
+    margin-top: 20px;
+    color: rgba(224, 44, 109, 0.87);
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+    display: block;
 }
