--- a/style.css
+++ b/style.css
@@ -149,3 +149,34 @@ section {
     text-decoration: none;
     display: block;
 }
+
+/* Blog Section */
+.blog-container{
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+}
+.blog-content{ 
+    margin-left: 100px;
+}
+.blog-content p{
+    width: 500px;
+    margin: 10px 0;
+}
+/* Footer Section */
+footer{
+    background-color: #0A0826;
+    padding: 50px 0;
+    text-align: center;
+}
+footer .primary-title, footer .primary-description{
+    color: #fff;
+}
+footer .primary-description{
+    font-weight: 500;
+}
+footer .fa-brands{
+    color: #fff;
+    font-size: 32px;
+    margin: 16px;
+}
